Fix buttons in navbar, align color palette, and refactor codebase

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -275,7 +275,7 @@ h4 {
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   font-family: "Archivo", sans-serif;
-  font-weight: bold;
+  // font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
   line-height: 1.1;
@@ -372,6 +372,12 @@ pre {
   padding-top: 1.5rem;
   font-size: 2rem;
   font-weight: 500;
+  color: #487783;
+}
+.navBarIcon {
+  color: #487783;
+  font-weight: 600;
+  font-size: larger;
 }
 .navBarLeft {
   font-family: "Archivo";
@@ -382,6 +388,7 @@ pre {
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: "Archivo";
 }
 .navBarLeft:hover {
   opacity: 0.75;
@@ -404,6 +411,7 @@ pre {
   padding-bottom: 3em;
   padding-left: 15em;
   padding-right: 15em;
+  
 }
 .splash-header{
   padding-left:5em;
@@ -426,6 +434,7 @@ pre {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-top: 4em;
   padding-bottom: 4em;
   margin: auto;
 }
@@ -437,7 +446,7 @@ pre {
   gap: 2rem;
   flex-wrap: wrap;
   flex: 1 0;
-  padding-top: 5em;
+  padding-top: 4em;
   padding-bottom: 4em;
   padding-left: 15em;
   padding-right: 15em;
@@ -524,7 +533,20 @@ pre {
   padding-bottom: 7em;
 }
 .terminal-header {
-  padding-left: 3em;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+.terminal-instructions {
+  // text-align: left;
+  text-align: left;
+  line-height: 1.5em;
+  padding-left: 8em;
+}
+@media only screen and (max-width: 1000px) {
+  .terminal-instructions {
+    padding-left: 1em;
+  }
 }
 .terminalContainer {
   min-height: 2rem !important;
@@ -534,6 +556,10 @@ pre {
 .terminalContainer pre {
   background-color: inherit;
   margin: 0;
+}
+.typewriter {
+  font-size: large;
+  font-weight: 400;
 }
 .copy {
   position: absolute;
@@ -549,7 +575,7 @@ pre {
     grid-row: 1/2;
   }
 }
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1000px) {
   .container {
     display: grid;
     grid-template-columns: 1fr;
